MM: update title: 21/01/2023
update the title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ You should have received a copy of the GNU General Public License along with thi
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>floyd-warshall by: marcosmoroz</title>
+    <title>Calculadora del algortimo de Floyd Warshall</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
